# oriflux

./: .dockerignore  .gitignore  .gitleaks.toml  .gitleaksignore  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md
.claude/agents/: oriflux-onboard-product.md
.playwright-mcp/: page-2026-07-12T09-39-31-629Z.yml
api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  workers-entrypoint.sh
api/graphify-out/cache/: stat-index.json
api/src/oriflux/: add_product.py  alerts.py  auth.py  billing.py  bootstrap.py  config.py  logs.py  purge_test_tenants.py  quota.py  ratelimit.py  set_stripe_prices.py
api/src/oriflux/ai/: ask.py  explain.py  gateway.py
api/src/oriflux/alerting/: evaluator.py  notify.py
api/src/oriflux/api/: admin.py  alerts.py  annotations.py  anomalies.py  auth.py  billing.py  classification.py  connectors.py  deps.py  digest.py  goals.py  infra.py  live.py  main.py  public.py  tools.py
api/src/oriflux/connectors/: revenue.py
api/src/oriflux/db/: __init__.py  migrate.py  models.py
api/src/oriflux/db/migrations/: env.py
api/src/oriflux/db/migrations/versions/: a3d5f81c47b2_alert_rule_project_backfill.py  a9d0c53fe816_connectors.py  adf76f0a2bfa_alert_rules_and_events.py  b2e83fd91c44_zeus_mapping.py  b7d41c09e3aa_goals.py  b8c2e94fa561_plans_and_quota.py  c1e52a77b4d1_annotations.py  c7f1a25de983_ai_usage.py  c9d4a17be250_stripe_billing.py  d4a92be15c07_anomalies.py  d5f1a9c3b720_plan_annual_price.py  d8e94fa1b7c2_insights.py  e32b1952d046_tenancy_rbac_api_keys.py  e6b7d31fa2c9_digests.py  e9fb52c8d1a4_anomaly_explanation.py  f1a7c93be5d8_share_tokens.py  f8c9e42ab1d3_exports.py
api/src/oriflux/enrichment/: crawlers.py  geo.py  sessions.py  ua.py  visitor.py
api/src/oriflux/ingest/: auth.py  main.py
api/src/oriflux/ingest/static/: oriflux.js
api/src/oriflux/integrations/: zeus.py
api/src/oriflux/models/: api_metrics.py  enrichment.py  events.py
api/src/oriflux/public/: allowlist.py
api/src/oriflux/query/: engine.py  funnel.py  models.py  registry.py  retention.py
api/src/oriflux/security/: google.py  keys.py  secrets.py  ssrf.py  tokens.py
api/src/oriflux/storage/: clickhouse.py  redis_stream.py
api/src/oriflux/workers/: anomalies.py  anomaly_job.py  batcher.py  celery_app.py  digest_job.py  digests.py  export_job.py  geoip_refresh.py  insight_job.py  insights.py  main.py
api/tests/integration/: conftest.py  test_alerting_e2e.py  test_api_metrics_e2e.py  test_mcp_e2e.py  test_query_registry_integration.py  test_selfhost_compose.py  test_walking_skeleton.py
api/tests/unit/: conftest.py  test_add_product.py  test_agent_tools.py  test_ai_gateway.py  test_ai_gateway_close.py  test_alert_api.py  test_alerting.py  test_annotations_api.py  test_anomalies.py  test_anomaly_job.py  test_api_keys.py  test_api_metrics_ingest.py  test_api_registry.py  test_ask.py  test_auth_and_admin.py  test_batcher.py  test_billing.py  test_bot_heuristics.py  test_celery_app.py  test_classification_api.py  test_clickhouse_session.py  test_connectors.py  test_dashboard_read_access.py  test_digest_job.py  test_digests.py  test_enrichment.py  test_event_validation.py  test_explain.py  test_exports.py  test_full_registry.py  test_funnel.py  test_funnel_api.py  test_geoip_refresh.py  test_glossary_completeness.py  test_goals_api.py  test_ingest_auth.py  test_ingest_custom_events.py  test_ingest_endpoint.py  test_ingest_enrichment.py  test_insights.py  (+15 more)
deploy/: README.md  deploy-portainer.sh  docker-compose.yml  docker-stack.yml  publish-ghcr.sh
deploy/self-host/: .env.example  docker-compose.yml
docs/: PRD.md  mcp.md
docs/public/: README.md  api-mcp.md  getting-started.md  oriflux-js.md  privacy.md  python-sdk.md  self-hosting.md
landing/: Dockerfile  Dockerfile.dockerignore  astro.config.mjs  nginx.conf  package-lock.json  package.json
sdk/python/: LICENSE  README.md  pyproject.toml
sdk/python/src/oriflux_sdk/: __init__.py  aggregator.py  flusher.py  middleware.py
sdk/python/tests/: test_aggregator.py  test_flusher.py  test_middleware.py
web/: .gitignore  Dockerfile  README.md  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
(+145 files in other folders)
