[project]
name = "oriflux"
version = "0.1.0"
description = "Oriflux — unified analytics platform for the Sponge Theory ecosystem (ingest, api, workers)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "redis>=5.0",
    "clickhouse-connect>=0.7",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "mypy>=1.10",
    "ruff>=0.5",
    "fakeredis>=2.36.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oriflux"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires the deploy/ docker compose services (ClickHouse, Redis)",
]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["oriflux"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = "clickhouse_connect.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends"]
