[project]
name = "oriflux"
version = "0.1.0"
description = "Oriflux — unified analytics platform for the Sponge Theory ecosystem (ingest, api, workers)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "redis>=5.0",
    "clickhouse-connect>=0.7",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "python-jose[cryptography]>=3.3",
    "google-auth>=2.27",
    "requests>=2.31",
    "geoip2>=4.8",
    "ua-parser>=1.0",
    "fastapi-mcp>=0.3",
    "celery[redis]>=5.4",
    "minio>=7.2.20",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "mypy>=1.10",
    "ruff>=0.5",
    "fakeredis>=2.36.2",
    "aiosqlite>=0.20",
    "celery-types>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oriflux"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires the deploy/ docker compose services (ClickHouse, Redis)",
]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["oriflux"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = "clickhouse_connect.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["jose.*", "google.auth.*", "google.oauth2.*", "fastapi_mcp.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
src = ["src", "tests"]
extend-exclude = ["src/oriflux/db/migrations/versions"]  # alembic-generated

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends"]
